--- a/src/css/globais.css
+++ b/src/css/globais.css
@@ -10,7 +10,7 @@ html {
   
   body {
     /* background-color: var(--cor-fundo-cinza-escuro); */
-    background: url('../imagens/fundo.png') center top no-repeat;
+    background: url('./imagens/fundo.png') center top no-repeat;
     background-size: cover;
     font-family: var(--fonte-primaria);
     font-size: var(--fonte-normal);
