--- a/src/css/globais.css
+++ b/src/css/globais.css
@@ -2,8 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap");
 
 html {
-    background: url('../imagens/fundo.png') center top no-repeat;
-    background-size: cover;
     font-size: 62.5%;
     color: var(--cor-branca);
     font-weight: 300;
@@ -11,6 +9,8 @@ html {
   }
   
   body {
+    background: url('.././imagens/fundo.png') center top no-repeat;
+    background-size: cover;
     font-family: var(--fonte-primaria);
     font-size: var(--fonte-normal);
   }
