--- a/src/css/secoes/home.css
+++ b/src/css/secoes/home.css
@@ -14,6 +14,7 @@
     /* ocupa 50% do tamanho e não faz grow nem shrink */
     max-width: 50%;
     padding: 0 15px;
+    margin-top: 100px;
 }
 
 @media(max-width: 1280px) {
